# ravetools

./: .Rbuildignore  .gitignore  404.html  CRAN-RELEASE  CRAN-SUBMISSION  DESCRIPTION  Dockerfile  NAMESPACE  NEWS.md  README.Rmd  README.md  _pkgdown.yml  authors.html  authors.md  clean  configure  configure.ac  cran-comments.md  index.html  index.md  installation.html  installation.md  llms.txt  pkgdown.yml  ravetools.Rproj  raveutils.Rproj  search.json  sitemap.xml
R/: RcppExports.R  aaa.R  aaa_context.R  band-pass.R  baseline.R  bpc.R  carla.R  class-Matrix4.R  class-Quaternion.R  class-Vector3.R  collapse.R  condition.R  convolve.R  crp.R  crp_cluster.R  curve-catmull.R  detrend.R  dijkstras-path.R  fast_cov.R  fast_quantile.R  fftfilt.R  fftw.R  filter-butter.R  filter-cutoff.R  filter-decimate.R  filter-diagnosis.R  filter-fftfilt.R  filter-filtfilt.R  filter-fir-design.R  filter-fir.R  filter-notch.R  filter-utils.R  filter.R  find_peaks.R  fir1.R  fst.R  gammatone.R  geometry-plane.R  guess_number.R  hdf5.R  (+42 more)
adhoc/: collapse-cplx.cpp  collapse-real.cpp  multitaper_example.R  multitaper_spectrogram_R.R  performance.R  play.Rmd  play.html  shiftarray.cpp  wavelet-test.R
data/: left_hippocampus_mask.rda  stimulation_signal.rda
inst/: CITATION  WORDLIST
man/: ECoGTensor.Rd  LazyFST.Rd  apply_transform3d.Rd  band_pass.Rd  baseline_array.Rd  bpc.Rd  butter_max_order.Rd  carla.Rd  catmull_rom_3d.Rd  check_filter.Rd  collapse.Rd  color_ramp_continuous.Rd  compare_context.Rd  convolve.Rd  crp.Rd  crp_cluster.Rd  customized-ui.Rd  decimate.Rd  design_filter.Rd  (+90 more)
(+326 files in other folders)
